// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Logo > it works 1`] = `
<div
  class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _this_f7d212 _animation-fade_f7d212"
  data-testid="Logo"
>
  <svg
    preserveAspectRatio="none"
    viewBox="0 0 64 64"
  >
    <polygon
      class="_a_f7d212"
      points="0,0 0,32 32,32"
    />
    <polygon
      class="_b_f7d212"
      points="0,32 0,64 32,64"
    />
    <polygon
      class="_c_f7d212"
      points="32,0 32,64 64,32"
    />
  </svg>
</div>
`;

exports[`Logo > it works with animations 1`] = `
<div
  class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _this_f7d212 _animation-fade_f7d212"
  data-testid="Logo"
>
  <svg
    preserveAspectRatio="none"
    viewBox="0 0 64 64"
  >
    <polygon
      class="_a_f7d212"
      points="0,0 0,32 32,32"
    />
    <polygon
      class="_b_f7d212"
      points="0,32 0,64 32,64"
    />
    <polygon
      class="_c_f7d212"
      points="32,0 32,64 64,32"
    />
  </svg>
</div>
`;

exports[`Logo > it works with animations 2`] = `
<div
  class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _this_f7d212 _animation-slide_f7d212"
  data-testid="Logo"
>
  <svg
    preserveAspectRatio="none"
    viewBox="0 0 64 64"
  >
    <polygon
      class="_a_f7d212"
      points="0,0 0,32 32,32"
    />
    <polygon
      class="_b_f7d212"
      points="0,32 0,64 32,64"
    />
    <polygon
      class="_c_f7d212"
      points="32,0 32,64 64,32"
    />
  </svg>
</div>
`;
